kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-time-service
  namespace: apps
  labels:
    app: simple-time-service
spec:
  type: ClusterIP
  selector:
    app: simple-time-service
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
  sessionAffinity: None
